# hoof-hearted-app

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: analyzer.py  tickets.py
static/: terminal.css
templates/: base.html  index.html
templates/partials/: analysis.html  error.html
